--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,5 +1,8 @@
 .container {
   margin: 0 auto;
-  max-width: 960px;
-  padding: 10px;
+  max-width: 70%;
+
+  @media screen and (max-width: 768px) {
+    max-width: 85%;
+  }
 }
